2010-04-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/tests/testBeliefComparison.cpp: Resuscitate testBeliefComparison.
	* src/tests/Makefile.am: Likewise.

	* INSTALL: Remove.

	* TODO: Update.

	* include/LogicVisitor.h: Fix warning.

	* m4/boost.m4: Update from
	<http://github.com/tsuna/boost.m4/raw/master/build-aux/boost.m4>.

	* include/BeliefState.h: Simplify BeliefState types.
	(setEpsilon): Sets epsilon flag.
	(BeliefStateEq): Returns true iff both parameters are equal.
	* src/genTest.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/QueryPlanGenerator.cpp: Likewise.
	* src/Cache.cpp: Likewise.
	* src/BeliefCombination.cpp: Likewise.
	* src/tests/testClasp.cpp: Likewise.
	* include/Server.tcc: Likewise.
	* include/SatSolver.tcc: Likewise.
	* include/SatSolver.h: Likewise.
	* include/PrimitiveDMCS.tcc: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/OptDMCS.tcc: Likewise.
	* include/OptDMCS.h: Likewise.
	* include/CommandType.h: Likewise.
	* include/Client.tcc: Likewise.
	* include/Client.h: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.
	* include/ClaspResultBuilder.h: Likewise.
	* include/Cache.h: Likewise.
	* include/BeliefCombination.h: Likewise.
	* include/BaseSolver.h: Likewise.

2010-04-22  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/clasp-wrapper.sh: Remove.

	* src/BeliefCombination.cpp: Remove debug output.
	Check that V has the same size as all other belief states.

	* include/SpiritFilePositionNode.h: Add operator<< for
	FilePositionNodeData to get suport for BOOST_SPIRIT_DEBUG.

	* include/SatSolver.tcc: Fix signed comparison.

	* include/OptDMCS.tcc: Remove debug output.
	* include/PrimitiveDMCS.tcc: Likewise.

	* include/ClaspResultGrammar.h: Add support for multi-line models
	and simplify belief state building.
	* include/ClaspResultGrammar.tcc: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.
	* include/ClaspResultBuilder.h: Likewise.
	* include/BaseBuilder.h: Likewise.
